==> amprnet-sweden/amprnet.se-Radio/ssd1306.c <==
#include "ssd1306.h"
#include "ti_drivers_config.h"
#include "Ampr-radio.h"
#include "oled.h"
#include <ti/drivers/I2C.h>

uint8_t SSD1306_Init (uint8_t address)
{ 
//	  const uint8_t * list = INIT_SSD1306;
  uint8_t * list = &INIT_SSD1306_OWN;
  uint8_t status = INIT_STATUS;                                   // init status
  uint8_t arguments,cmdbyte,bytecnt;
  uint8_t commands = *list++;

  xprint("1306 init ");
  xprint_char(commands);
  xprint(" ccmds\n");
  bytecnt = 0;
  // -------------------------------------------------------------------------------------
  while (commands--) {
    // Command
    // -----------------------------------------------------------------------------------
//	    status = SSD1306_Send_Command (pgm_read_byte(list++));
	  cmdbyte = *list++;
	  arguments = *list++;
//	  xprint("cmd ");
//	  xprint_xchar(cmdbyte);
	  wdata[0] = 0;
	  wdata[1] = cmdbyte;
	  bytecnt = 2;
//	  xprint(" args ");
//	  xprint_xchar(arguments);
	  while (arguments-- > 0) {
		  wdata[bytecnt++] = *list;
//		  xprint(" ");
//		  xprint_xchar(*list);
		  list++;
	  }
	  transaction.writeCount = bytecnt;
//	  xprint(" i2cout ");
//	  xprint_char(bytecnt);
//	  xprint("\n");
	  I2C_transfer(OLEDHandle, &transaction);
	  if(transaction.status != 0) {
	        return(transaction.status);
	  }
	  if(cmdbyte == 0xdb)
		  delay(5);


//	    status = SSD1306_Send_Command (*list++);
//    if (SSD1306_SUCCESS != status) {
//      return status;
//    }
    // Arguments
    // -----------------------------------------------------------------------------------
//    arguments = pgm_read_byte (list++);
//    arguments = list++;
//    while (arguments--) {
//        status = SSD1306_Send_Command (pgm_read_byte(list++));  // argument
//        status = SSD1306_Send_Command (*list++);  // argument
//      if (SSD1306_SUCCESS != status) {
//        return status;
//      }
    }
    xprint("\n end of list\n");
//  }
  // TWI: Stop
  // -------------------------------------------------------------------------------------
//  TWI_Stop (); GW

  return SSD1306_SUCCESS;
}

uint8_t SSD1306_Send_Command (uint8_t command)
{
  uint8_t status = INIT_STATUS;

  transaction.writeBuf = &wdata;
  transaction.readCount = 0; //sizeof(rdata);
  transaction.writeCount = 2;
  wdata[0] = 0;
  wdata[1] = command;
//    Expander_Write(0);
  I2C_transfer(OLEDHandle, &transaction);
//  if(transaction.status != 0) {
      return(transaction.status);
//  }
}

uint8_t SSD1306_DrawChar (char character)
{
  uint8_t i = 0;
  char outbuf[16];

  if (SSD1306_UpdatePosition () == SSD1306_ERROR) {
    return SSD1306_ERROR;
  }
  while (i < CHARS_COLS_LENGTH) {
//	    sprintf(outbuf,"%08x\n",*(&FONTS[character-32][i]));
//	    xprint(outbuf);

    cacheMemLcd[_counter++] = *(&FONTS[character-32][i++]);
  }
  _counter++;

  return SSD1306_SUCCESS;
}

void SSD1306_DrawString (char *str)
{
  int i = 0;
  while (str[i] != '\0') {
    SSD1306_DrawChar (str[i++]);
  }
}

uint8_t SSD1306_DrawPixel (uint8_t x, uint8_t y)
{
  uint8_t page = 0;
  uint8_t pixel = 0;
  
  if ((x > MAX_X) || (y > MAX_Y)) {                               // if out of range
    return SSD1306_ERROR;                                         // out of range
  }
  page = y >> 3;                                                  // find page (y / 8)
  pixel = 1 << (y - (page << 3));                                 // which pixel (y % 8)
  _counter = x + (page << 7);                                     // update counter
  cacheMemLcd[_counter++] |= pixel;                               // save pixel

  return SSD1306_SUCCESS;
}

uint8_t SSD1306_DrawLine (uint8_t x1, uint8_t x2, uint8_t y1, uint8_t y2)
{
  int16_t D;                                                      // determinant
  int16_t delta_x, delta_y;                                       // deltas
  int16_t trace_x = 1, trace_y = 1;                               // steps

  delta_x = x2 - x1;                                              // delta x
  delta_y = y2 - y1;                                              // delta y
  
  if (delta_x < 0) {                                              // check if x2 > x1
    delta_x = -delta_x;                                           // negate delta x
    trace_x = -trace_x;                                           // negate step x
  }
  
  if (delta_y < 0) {                                              // check if y2 > y1
    delta_y = -delta_y;                                           // negate detla y
    trace_y = -trace_y;                                           // negate step y
  }

  // Bresenham condition for m < 1 (dy < dx)
  // -------------------------------------------------------------------------------------
  if (delta_y < delta_x) {
    D = (delta_y << 1) - delta_x;                                 // calculate determinant
    SSD1306_DrawPixel (x1, y1);                                   // draw first pixel
    while (x1 != x2) {                                            // check if x1 equal x2
      x1 += trace_x;                                              // update x1
      if (D >= 0) {                                               // check if determinant is positive
        y1 += trace_y;                                            // update y1
        D -= 2*delta_x;                                           // update determinant
      }
      D += 2*delta_y;                                             // update deteminant
      SSD1306_DrawPixel (x1, y1);                                 // draw next pixel
    }
  // for m > 1 (dy > dx)    
  // -------------------------------------------------------------------------------------
  } else {
    D = delta_y - (delta_x << 1);                                 // calculate determinant
    SSD1306_DrawPixel (x1, y1);                                   // draw first pixel
    while (y1 != y2) {                                            // check if y2 equal y1
      y1 += trace_y;                                              // update y1
      if (D <= 0) {                                               // check if determinant is positive
        x1 += trace_x;                                            // update y1
        D += 2*delta_y;                                           // update determinant
      }
      D -= 2*delta_x;                                             // update deteminant
      SSD1306_DrawPixel (x1, y1);                                 // draw next pixel
    }
  }

  return SSD1306_SUCCESS;
}
